--- a/TwitchChatHelperTest/TwitchChatHelperTest.fsproj
+++ b/TwitchChatHelperTest/TwitchChatHelperTest.fsproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="MessageParsersTest.fs" />
+    <Compile Include="MessageParsersCapabilities.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
