--- a/TwitchChatHelper/TwitchChatHelper.fsproj
+++ b/TwitchChatHelper/TwitchChatHelper.fsproj
@@ -59,10 +59,15 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="MyCfg.fs" />
     <Compile Include="ConsoleOutHelpers.fs" />
+    <Compile Include="MessageTypesBasic.fs" />
+    <Compile Include="MessageCapabilitiesTypes.fs" />
     <Compile Include="MessageTypes.fs" />
     <Compile Include="CommandTypes.fs" />
+    <Compile Include="MessageParsersBasic.fs" />
+    <Compile Include="MessageCapabilitiesParsers.fs" />
     <Compile Include="MessageParsers.fs" />
     <Compile Include="TwitchCommands.fs" />
+    <Compile Include="TwitchCommandsCapabilities.fs" />
     <Compile Include="MessagePrint.fs" />
     <Compile Include="FileLogger.fs" />
     <Compile Include="CliArguments.fs" />
