--- a/TwitchChatHelperTest/TwitchChatHelperTest.fsproj
+++ b/TwitchChatHelperTest/TwitchChatHelperTest.fsproj
@@ -58,6 +58,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="MessageParsersTest.fs" />
     <Compile Include="MessageParsersCapabilitiesTest.fs" />
+    <Compile Include="MessageCommandsCommandsTest.fs" />
     <Compile Include="MessageCounterTest.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
